hphp/test/zend/good/tests/strings/offsets_chaining_2.php
<?php
$string = "foobar";
var_dump($string{0}{0}[0][0]);
?>