hphp/test/zend/bad/tests-lang/bug29566.php
<?php
$var="This is a string";

$dummy="";
unset($dummy);

foreach($var['nosuchkey'] as $v) {
}
?>
===DONE===